--- a/src/main.css
+++ b/src/main.css
@@ -1,1 +1,1 @@
-*{margin:0;padding:0;box-sizing:border-box}html{font-size:10px}body{font-family:"Lato",sans-serif}
+*{margin:0;padding:0;box-sizing:border-box}html{font-size:10px}body{font-family:"Lato",sans-serif}.header{width:100%;height:100vh;position:relative}.header__video{position:absolute;top:0;left:0;width:100%;height:100%;overflow:hidden}
