added poster and shape to video. added _variables.scss. added header content and styles

--- a/src/scss/abstracts/_mixins.scss
+++ b/src/scss/abstracts/_mixins.scss
@@ -7,3 +7,10 @@
   width: $width;
   height: $height;
 }
+
+@mixin align($flex, $justify-content, $align-items, $height) {
+  display: $flex;
+  justify-content: $justify-content;
+  align-items: $align-items;
+  height: $height;
+}
