--- a/src/scss/components/_header.scss
+++ b/src/scss/components/_header.scss
@@ -1,12 +1,39 @@
 @use "../abstracts/mixins";
+@use "../abstracts/variables";
 
 .header {
   width: 100%;
   height: 100vh;
   position: relative;
+  clip-path: polygon(50% 0, 100% 0, 100% 90%, 0 100%, 0 100%, 0 60%, 0 0);
 
   &__video {
     @include mixins.position(absolute, 0, null, null, 0, 100%, 100%);
     overflow: hidden;
+  }
+
+  &__content {
+    @include mixins.position(absolute, 0, null, null, 0, 100%, 100%);
+    background-color: rgba(0, 0, 0, 0.4);
+
+    &__text {
+      @include mixins.align(flex, center, center, 100vh);
+
+      &__child {
+        &__h1 {
+          color: variables.$white;
+          text-transform: uppercase;
+          font-size: 4rem;
+          font-weight: 900;
+          line-height: 2.7rem;
+        }
+
+        &__p {
+          margin-top: 0.7rem;
+          color: variables.$white;
+          font-size: 1.5rem;
+        }
+      }
+    }
   }
 }
