--- a/src/scss/components/_header.scss
+++ b/src/scss/components/_header.scss
@@ -23,15 +23,19 @@
         &__h1 {
           color: variables.$white;
           text-transform: uppercase;
-          font-size: 4rem;
+          font-size: 4.2rem;
           font-weight: 900;
-          line-height: 2.7rem;
+          line-height: 2.8rem;
         }
 
         &__p {
-          margin-top: 0.7rem;
+          margin-top: 0.8rem;
           color: variables.$white;
           font-size: 1.5rem;
+        }
+
+        __link {
+          margin-top: 0.8rem;
         }
       }
     }
